Manifests/05_networking/yuk_dengeleme_ve_metallb_manifest_2.yaml
# web-app-lb isimli Service nesnesi tanımlama dosyası
apiVersion: v1
kind: Service
metadata:
  name: web-app-lb
  namespace: production
  annotations:
    # İsteğe bağlı: Belirli bir IP havuzunu seçmek için
    metallb.universe.tf/address-pool: production-ip-pool
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 8080
