Manifests/05_networking/gateway_api_manifest_2.yaml
# billing-route isimli HTTPRoute nesnesi tanımlama dosyası
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: billing-route
  namespace: production
spec:
  parentRefs:
    - name: external-gateway
      namespace: infra-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /billing
      backendRefs:
        - name: billing-api-service
          port: 80
